@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -38,6 +38,8 @@ bool LockCommand::Execute()
 		progDlg.SetPathList(pathList);
 		if (parser.HasVal(_T("closeonend")))
 			progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+		if (parser.HasKey(_T("closeforlocal")))
+			progDlg.SetAutoCloseLocal(TRUE);
 		progDlg.DoModal();
 		bRet = !progDlg.DidErrorsOccur();
 	}
@@ -52,6 +54,8 @@ bool LockCommand::Execute()
 			progDlg.SetCommitMessage(lockDlg.m_sLockMessage);
 			if (parser.HasVal(_T("closeonend")))
 				progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+			if (parser.HasKey(_T("closeforlocal")))
+				progDlg.SetAutoCloseLocal(TRUE);
 			progDlg.DoModal();
 			bRet = !progDlg.DidErrorsOccur();
 		}
