@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -31,6 +31,8 @@ bool MergeAllCommand::Execute()
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_MergeAll);
 		if (parser.HasVal(_T("closeonend")))
 			progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+		if (parser.HasKey(_T("closeforlocal")))
+			progDlg.SetAutoCloseLocal(TRUE);
 		progDlg.SetPathList(pathList);
 		progDlg.SetDepth(dlg.m_depth);
 		progDlg.SetDiffOptions(SVN::GetOptionsString(dlg.m_bIgnoreEOL, dlg.m_IgnoreSpaces));
